[gd_scene load_steps=64 format=3 uid="uid://bfqo6stej1puk"]

[ext_resource type="Script" path="res://Boss/Air/boss_air.gd" id="1_eo68x"]
[ext_resource type="Shader" path="res://Scenes/takedamage.gdshader" id="2_l3bmx"]
[ext_resource type="Texture2D" uid="uid://c0xnvh31ji6ck" path="res://Assets/Factions/Bosses/Air/idle1 (2).png" id="3_5np0h"]
[ext_resource type="Texture2D" uid="uid://bqbgc5h3mdrue" path="res://Assets/Factions/Bosses/Air/mati1.png" id="3_kdqob"]
[ext_resource type="Texture2D" uid="uid://rcdfpeco13n6" path="res://Assets/Factions/Bosses/Air/idle2 (1).png" id="4_c6l5j"]
[ext_resource type="Texture2D" uid="uid://yti0033sw2aw" path="res://Assets/Factions/Bosses/Air/mati2.png" id="4_tbkus"]
[ext_resource type="Texture2D" uid="uid://yr2hfh1g1j0n" path="res://Assets/Factions/Bosses/Air/mati3.png" id="5_8m8wf"]
[ext_resource type="Texture2D" uid="uid://bbu75ql5nphu0" path="res://Assets/Factions/Bosses/Air/mati4.png" id="6_smf4a"]
[ext_resource type="Texture2D" uid="uid://cqxijhysrwt8m" path="res://Assets/Factions/Bosses/Air/mati5.png" id="7_q1c6b"]
[ext_resource type="Texture2D" uid="uid://pdd5q6pch2pl" path="res://Assets/Factions/Bosses/Air/mati6.png" id="8_5cd6r"]
[ext_resource type="Texture2D" uid="uid://bem86vdh1u0rn" path="res://Assets/Factions/Bosses/Air/mati7.png" id="9_rtid8"]
[ext_resource type="Texture2D" uid="uid://lhwsan6s86h4" path="res://Assets/Factions/Bosses/Air/mati8.png" id="10_51q38"]
[ext_resource type="Texture2D" uid="uid://dwhu5w5c33qaf" path="res://Assets/Factions/Bosses/Air/roar1.png" id="13_ph23o"]
[ext_resource type="Texture2D" uid="uid://ovqsy7gsrfw1" path="res://Assets/Factions/Bosses/Air/transform1 (1).png" id="13_t5b4h"]
[ext_resource type="Texture2D" uid="uid://cxpcjfpe5ew7k" path="res://Assets/Factions/Bosses/Air/transform2 (1).png" id="14_83vwb"]
[ext_resource type="Script" path="res://Scripts/boss_animation_controller.gd" id="14_l5u6e"]
[ext_resource type="Texture2D" uid="uid://bur6nf3n4ye4o" path="res://Assets/Factions/Bosses/Air/roar.png" id="14_oynuv"]
[ext_resource type="Texture2D" uid="uid://cm5ws5jwovqvh" path="res://Assets/Factions/Bosses/Golem/Particle/Earth Bump.png" id="15_02l83"]
[ext_resource type="Texture2D" uid="uid://cn00srwnhj7gl" path="res://Assets/Factions/Bosses/Air/transform3 (2).png" id="15_brkkb"]
[ext_resource type="Texture2D" uid="uid://k2a6t3ocolnj" path="res://Assets/Factions/Bosses/Air/tornado2 (1).png" id="16_6ift7"]
[ext_resource type="Texture2D" uid="uid://byjp0164df8h4" path="res://Assets/Factions/Bosses/Golem/Particle/Earth Wall.png" id="16_iqu16"]
[ext_resource type="Texture2D" uid="uid://cdovn81psocv1" path="res://Assets/Factions/Bosses/Air/tranform4.png" id="16_pwsdv"]
[ext_resource type="Texture2D" uid="uid://bfl1jqm2ismh6" path="res://Assets/Factions/Bosses/Air/tranform5.png" id="17_vik3x"]
[ext_resource type="Texture2D" uid="uid://cyqewccbtpvj1" path="res://Assets/Factions/Bosses/Air/tornado3 (1).png" id="17_xein7"]
[ext_resource type="Texture2D" uid="uid://bcrbl066oyjop" path="res://Assets/Factions/Bosses/Air/transform6.png" id="18_7dfyd"]
[ext_resource type="Texture2D" uid="uid://s10de4s11tsq" path="res://Assets/Factions/Bosses/Air/tornado1 (1).png" id="19_47pnw"]
[ext_resource type="Script" path="res://Scripts/boss_health_system.gd" id="27_jtpjv"]
[ext_resource type="PackedScene" uid="uid://3b55casibbeg" path="res://Scenes/healthbar.tscn" id="28_y405j"]
[ext_resource type="Theme" uid="uid://r1kql7apbef" path="res://Resources/main_menu.tres" id="29_kgqd3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w2mge"]
shader = ExtResource("2_l3bmx")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_4pqgq"]
animations = [{
"frames": [],
"loop": false,
"name": &"dash",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kdqob")
}, {
"duration": 1.0,
"texture": ExtResource("4_tbkus")
}, {
"duration": 1.0,
"texture": ExtResource("5_8m8wf")
}, {
"duration": 1.0,
"texture": ExtResource("6_smf4a")
}, {
"duration": 1.0,
"texture": ExtResource("7_q1c6b")
}, {
"duration": 1.0,
"texture": ExtResource("8_5cd6r")
}, {
"duration": 1.0,
"texture": ExtResource("9_rtid8")
}, {
"duration": 1.0,
"texture": ExtResource("10_51q38")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5np0h")
}, {
"duration": 1.0,
"texture": ExtResource("4_c6l5j")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5np0h")
}, {
"duration": 1.0,
"texture": ExtResource("13_ph23o")
}, {
"duration": 1.0,
"texture": ExtResource("14_oynuv")
}],
"loop": false,
"name": &"roar",
"speed": 3.0
}, {
"frames": [],
"loop": false,
"name": &"skill1",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_47pnw")
}, {
"duration": 1.0,
"texture": ExtResource("16_6ift7")
}, {
"duration": 1.0,
"texture": ExtResource("17_xein7")
}],
"loop": true,
"name": &"tornado",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_t5b4h")
}, {
"duration": 1.0,
"texture": ExtResource("14_83vwb")
}, {
"duration": 1.0,
"texture": ExtResource("15_brkkb")
}, {
"duration": 1.0,
"texture": ExtResource("16_pwsdv")
}, {
"duration": 1.0,
"texture": ExtResource("17_vik3x")
}, {
"duration": 1.0,
"texture": ExtResource("18_7dfyd")
}, {
"duration": 1.0,
"texture": ExtResource("19_47pnw")
}],
"loop": false,
"name": &"transform",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_47pnw")
}, {
"duration": 1.0,
"texture": ExtResource("18_7dfyd")
}, {
"duration": 1.0,
"texture": ExtResource("17_vik3x")
}, {
"duration": 1.0,
"texture": ExtResource("16_pwsdv")
}, {
"duration": 1.0,
"texture": ExtResource("15_brkkb")
}, {
"duration": 1.0,
"texture": ExtResource("14_83vwb")
}, {
"duration": 1.0,
"texture": ExtResource("13_t5b4h")
}, {
"duration": 1.0,
"texture": ExtResource("3_5np0h")
}],
"loop": false,
"name": &"transform_back",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_spj0f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_if47o"]
resource_name = "flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7s777"]
_data = {
"RESET": SubResource("Animation_spj0f"),
"flash": SubResource("Animation_if47o")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_lis0k"]
atlas = ExtResource("15_02l83")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c67xg"]
atlas = ExtResource("15_02l83")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6fdp"]
atlas = ExtResource("15_02l83")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj1g7"]
atlas = ExtResource("15_02l83")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4aa5t"]
atlas = ExtResource("15_02l83")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_knrsc"]
atlas = ExtResource("15_02l83")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tky5h"]
atlas = ExtResource("15_02l83")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy1tj"]
atlas = ExtResource("15_02l83")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ivfp"]
atlas = ExtResource("16_iqu16")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7smud"]
atlas = ExtResource("16_iqu16")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtvcv"]
atlas = ExtResource("16_iqu16")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5q46"]
atlas = ExtResource("16_iqu16")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6lpd"]
atlas = ExtResource("16_iqu16")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qx5g2"]
atlas = ExtResource("16_iqu16")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uasj"]
atlas = ExtResource("16_iqu16")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gadhg"]
atlas = ExtResource("16_iqu16")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gal3"]
atlas = ExtResource("16_iqu16")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhljq"]
atlas = ExtResource("16_iqu16")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1ktd"]
atlas = ExtResource("16_iqu16")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg8ei"]
atlas = ExtResource("16_iqu16")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q3s5"]
atlas = ExtResource("16_iqu16")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5m74"]
atlas = ExtResource("16_iqu16")
region = Rect2(48, 144, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_obrv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lis0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c67xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6fdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj1g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4aa5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knrsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tky5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy1tj")
}],
"loop": true,
"name": &"bump",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ivfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7smud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtvcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5q46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6lpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx5g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uasj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gadhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gal3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhljq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1ktd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg8ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q3s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5m74")
}],
"loop": true,
"name": &"wall",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1n23d"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qudo"]
size = Vector2(87.5, 142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykgkh"]
size = Vector2(87.5, 142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1lr4"]
size = Vector2(40, 63)

[sub_resource type="CircleShape2D" id="CircleShape2D_g0pof"]
radius = 707.229

[sub_resource type="CircleShape2D" id="CircleShape2D_yeuhs"]
radius = 283.924

[node name="Boss_Air" type="CharacterBody2D"]
y_sort_enabled = true
scale = Vector2(0.480001, 0.480001)
collision_mask = 6
script = ExtResource("1_eo68x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_w2mge")
position = Vector2(2.08333, 91.6665)
scale = Vector2(3.45537, 3.45537)
sprite_frames = SubResource("SpriteFrames_4pqgq")
animation = &"roar"
frame = 2
frame_progress = 1.0
offset = Vector2(0, -31)
script = ExtResource("14_l5u6e")

[node name="FlashAnimation" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_7s777")
}

[node name="Particle" type="AnimatedSprite2D" parent="."]
position = Vector2(76, 54)
scale = Vector2(2.48, 2.48)
sprite_frames = SubResource("SpriteFrames_obrv0")
animation = &"bump"
frame_progress = 0.604919

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 57)
shape = SubResource("CircleShape2D_1n23d")

[node name="CombatSystem" type="Node2D" parent="."]
position = Vector2(8.00006, 59)
scale = Vector2(2.48213, 2.48213)

[node name="WeaponHitbox" type="Area2D" parent="CombatSystem"]
position = Vector2(-74.9357, -53.583)
scale = Vector2(0.495981, 0.333333)

[node name="LeftCollision" type="CollisionShape2D" parent="CombatSystem/WeaponHitbox"]
position = Vector2(86.75, 77)
shape = SubResource("RectangleShape2D_5qudo")
disabled = true

[node name="RightCollision" type="CollisionShape2D" parent="CombatSystem/WeaponHitbox"]
position = Vector2(193, 77)
shape = SubResource("RectangleShape2D_ykgkh")
disabled = true

[node name="BossBodyHitbox" type="Area2D" parent="CombatSystem"]
position = Vector2(0.134262, 4.76735)
scale = Vector2(1.2095, 1.3223)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CombatSystem/BossBodyHitbox"]
position = Vector2(-5.52601, -24.6792)
scale = Vector2(1.0332, 0.670944)
shape = SubResource("RectangleShape2D_u1lr4")

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("27_jtpjv")

[node name="Timer" type="Timer" parent="HealthSystem"]
one_shot = true

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2(-35.4166, 0)
scale = Vector2(2.71536, 2.71536)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(4, -24)
shape = SubResource("CircleShape2D_g0pof")

[node name="AttackingArea" type="Area2D" parent="."]
position = Vector2(168.75, -10.4166)
scale = Vector2(2.8156, 2.8156)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingArea"]
position = Vector2(-76, -6)
shape = SubResource("CircleShape2D_yeuhs")

[node name="TimerCanShoot" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerCanShootCircle" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="TimerCanRoar" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Healthbar" parent="CanvasLayer" instance=ExtResource("28_y405j")]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 386.0
offset_top = 541.0
offset_right = 527.0
offset_bottom = 578.0
theme = ExtResource("29_kgqd3")
theme_override_font_sizes/font_size = 27
text = "Sira Lhok"
vertical_alignment = 1

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="CombatSystem/WeaponHitbox" to="." method="_on_weapon_hitbox_area_entered"]
[connection signal="body_entered" from="CombatSystem/WeaponHitbox" to="CombatSystem" method="_on_weapon_hitbox_body_entered"]
[connection signal="body_entered" from="CombatSystem/BossBodyHitbox" to="." method="_on_body_hitbox_body_entered"]
[connection signal="body_exited" from="CombatSystem/BossBodyHitbox" to="." method="_on_body_hitbox_body_exited"]
[connection signal="timeout" from="HealthSystem/Timer" to="HealthSystem" method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="AttackingArea" to="." method="_on_attacking_area_body_entered"]
[connection signal="body_exited" from="AttackingArea" to="." method="_on_attacking_area_body_exited"]
[connection signal="timeout" from="TimerCanShoot" to="." method="_on_timer_can_shoot_timeout"]
[connection signal="timeout" from="TimerCanShootCircle" to="." method="_on_timer_can_shoot_circle_timeout"]
[connection signal="timeout" from="TimerCanRoar" to="." method="_on_timer_can_roar_timeout"]
